<resources>
    <string name="app_name">PersonalTrainer</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hair_care">Hair Care</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="body_care">Body Care</string>
    <string name="general_tips">General Tips</string>
    <string name="skin_care">Skin Care</string>
    <string name="diet">Diet</string>
    <string name="workout_management">Workout Management</string>
    <string name="routine_maker">Routine Maker</string>
    <string name="exercise">Exercise</string>
    <string name="Diet">diet</string>
    <string name="eat_fruits_and_veggies_eating_fruits_and_vegetables_are_of_great_help_to_human_body_loading_on_fruits_and_veggies_will_help_you_get_a_glowing_skin_again_staying_hydrated_is_very_important_for_your_health_drinking_plenty_of_water_helps_your_akin_to_stay_hydrated_and_flush_out_toxins_we_are_all_aware_of_the_benefits_of_green_tea_sipping_some_green_tea_will_help_your_skin_in_many_ways_n_n_p"><![CDATA[EAT FRUITS and VEGGIES Eating fruits and vegetables are of great help to human body.Loading on fruits and veggies will help you get a glowing skin.Again staying hydrated is very important for your health.Drinking plenty of water helps your akin to stay hydrated and flush out toxins. We are all aware of the benefits of green tea.Sipping some green tea will help your skin in many ways.  </p>]]></string>
    <string name="strenght_training">Strenght Training</string>
    <string name="cardio">Cardio</string>
    <string name="yoga">Yoga</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercice">Exercice</string>


    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Over Weight</string>
    <string name="obese_class_i">Obesety Class_i</string>
    <string name="obese_class_ii">Obesety Class_ii</string>
    <string name="obese_class_iii">Obesety Class_iii</string>
    <string name="underweight">Underweight</string>
    <string name="b_m_i">B.M.I</string>
    <string name="strength_training">Strength Training</string>
    <string name="joint_pain">Joint Pain</string>


</resources>
